--- a/index.html
+++ b/index.html
@@ -1,48 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Sem3_HT</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="header container">
-      <img src="./img/header_Logo.png" alt="logo" />
-      <nav class="nav container">
-        <a class="nav__links link__Home" href="#">Home</a>
-        <a class="nav__links" href="#">About us</a>
-        <a class="nav__links" href="#">Services</a>
-        <a class="nav__links" href="#">Features</a>
-        <a class="nav__links" href="#">Team</a>
-        <a class="nav__links" href="#">Blog</a>
-        <a class="nav__links" href="#">Contact</a>
-      </nav>
+        <img src="./img/header_Logo.png" alt="logo" />
+        <nav class="nav container">
+            <a class="nav__links link__Home" href="#">Home</a>
+            <a class="nav__links" href="#">About us</a>
+            <a class="nav__links" href="#">Services</a>
+            <a class="nav__links" href="#">Features</a>
+            <a class="nav__links" href="#">Team</a>
+            <a class="nav__links" href="#">Blog</a>
+            <a class="nav__links" href="#">Contact</a>
+        </nav>
     </header>
     <main class="main">
-      <section class="content container">
-        <div class="content__leftside">
-          <h1>SEO & Digital Marketing For Your Website.</h1>
-          <p>
-            Provide all kind of seo services and help to improve seo ranking.
-            Globally incubate standards.
-          </p>
-          <div>
-            <button class="btn1">Start Now</button>
-            <button class="btn2">Watch Video</button>
-          </div>
+        <section class="content container">
+            <div class="content__leftside">
+                <h1>SEO & Digital Marketing For Your Website.</h1>
+                <p>
+                    Provide all kind of seo services and help to improve seo ranking. Globally incubate standards.
+                </p>
+                <div class="buttons">
+                    <button class="btn1">Start Now</button>
+                    <button class="btn2">Watch Video</button>
+                </div>
+            </div>
+            <img src="./img/content-img.png" alt="content-img" />
+        </section>
+        <div class="logoes container">
+            <a href="#"><img src="./img/logo1.png" alt="logo1" /></a>
+            <a href="#"><img src="./img/logo2.png" alt="logo1" /></a>
+            <a href="#"><img src="./img/logo3.png" alt="logo1" /></a>
+            <a href="#"><img src="./img/logo4.png" alt="logo1" /></a>
         </div>
-        <img src="./img/content-img.png" alt="content-img" />
-      </section>
+        <section class="content2 container">
+            <div class="content2__blocks line1">
+                <img src="./img/icon.png" alt="icon" />
+                <div>
+                    <h2>Grow Your Business</h2>
+                    <p>
+                        Leverage agile frameworks to provide a robust synopsis for high level overviews.
+                    </p>
+                    <button><a href="#">Read more...</a></button>
+                </div>
+            </div>
+            <div class="content2__blocks line1">
+                <img src="./img/icon (1).png" alt="icon1" />
+                <h2>Get Quality Ieads</h2>
+                <p>
+                    Leverage agile frameworks to provide a robust synopsis for high level overviews.
+                </p>
+                <button><a href="#">Read more...</a></button>
+            </div>
+            <div class="content2__blocks line1">
+                <img src="./img/icon (2).png" alt="icon2" />
+                <h2>Drive More Sales</h2>
+                <p>
+                    Leverage agile frameworks to provide a robust synopsis for high level overviews.
+                </p>
+                <button><a href="#">Read more...</a></button>
+            </div>
+
+            <div class="content2__blocks line2">
+                <h2>Why You Should Choose Us.</h2>
+                <p>
+                    Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business applications through revolutionary catalysts.
+                </p>
+            </div>
+            <div class="content2__blocks line3">
+                <img src="./img/img1.png" alt="img1" />
+                <h2>Keyword Research</h2>
+                <p class="par__line3">
+                    Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.
+                </p>
+                <button class="button2"><a href="#">Learn more ></a></button>
+            </div>
+            <div class="content2__blocks line3">
+                <img src="./img/img2.png" alt="img2" />
+                <h2>Seo Optimazadion</h2>
+                <p class="par__line3">
+                    Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.
+                </p>
+                <button class="button2"><a href="#">Learn more ></a></button>
+            </div>
+            <div class="content2__blocks line3">
+                <img src="./img/img3.png" alt="img3" />
+                <h2>Social Marketing</h2>
+                <p class="par__line3">
+                    Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.
+                </p>
+                <button class="button2"><a href="#">Learn more ></a></button>
+            </div>
+        </section>
     </main>
-    <footer class="footer">
-      <div class="logoes container">
-        <a href="#"><img src="./img/logo1.png" alt="logo1" /></a>
-        <a href="#"><img src="./img/logo2.png" alt="logo1" /></a>
-        <a href="#"><img src="./img/logo3.png" alt="logo1" /></a>
-        <a href="#"><img src="./img/logo4.png" alt="logo1" /></a>
-      </div>
-    </footer>
-  </body>
+    <footer class="footer"></footer>
+</body>
+
 </html>
